releasing version 2.6.0-0ubuntu1
(bzr r159.1.164)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (2.6.0-0ubuntu1) UNRELEASED; urgency=low
+nux (2.6.0-0ubuntu1) precise; urgency=low
 
   * New upstream release.
     - Restore OpenGL default line width and point size (LP: #937444)
@@ -9,7 +9,7 @@ nux (2.6.0-0ubuntu1) UNRELEASED; urgency=low
   * debian/control:
     - build-dep on libibus-1.0-dev for ibus support
 
- -- Didier Roche <didrocks@ubuntu.com>  Mon, 12 Mar 2012 09:57:17 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Mon, 12 Mar 2012 11:45:31 +0100
 
 nux (2.4.0-0ubuntu2) precise; urgency=low
 
