--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,11 @@ nux (2.8.0-0ubuntu2) UNRELEASED; urgency=low
   * debian/rules:
     - remove disable-tests are now tests are only build if the right build-dep
       are here.
+  * debian/control:
+    - add libxtst-dev as nux Makefile rules are broken and still try to include
+      the .h files even if the pc file check failed.
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 29 Mar 2012 18:30:19 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Tue, 03 Apr 2012 17:13:50 +0200
 
 nux (2.8.0-0ubuntu1) precise-proposed; urgency=low
 
