--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nux (2.12.0-0ubuntu2) UNRELEASED; urgency=low
+
+  * debian/control:
+    - build and dep on unversionned version of boost (transition to 1.49
+      in quantal)
+
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 31 May 2012 10:22:35 +0200
+
 nux (2.12.0-0ubuntu1) precise-proposed; urgency=low
 
   * New upstream release.
