--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nux (2.12.0-0ubuntu2) UNRELEASED; urgency=low
   * debian/control:
     - build and dep on unversionned version of boost (transition to 1.49
       in quantal)
+  * debian/rules:
+    - build in parallel
 
  -- Didier Roche <didrocks@ubuntu.com>  Thu, 31 May 2012 10:22:35 +0200
 
