--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nux (2.12.0-0ubuntu2) UNRELEASED; urgency=low
   * debian/control:
     - build and dep on unversionned version of boost (transition to 1.49
       in quantal) (LP: #1008219)
+    - build-dep and add dep for -dev on glew 1.7
   * debian/rules:
     - build in parallel
 
