--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ nux (2.12.0-0ubuntu2) UNRELEASED; urgency=low
     - build and dep on unversionned version of boost (transition to 1.49
       in quantal) (LP: #1008219)
     - build-dep and add dep for -dev on glew 1.7
+    - build with gcc 4.6
   * debian/rules:
     - build in parallel
+    - force 4.6 build for now
 
  -- Didier Roche <didrocks@ubuntu.com>  Thu, 31 May 2012 10:22:35 +0200
 
