--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nux (2.12.0-0ubuntu2) UNRELEASED; urgency=low
     - build-dep and add dep for -dev on glew 1.7
     - build with gcc 4.6
     - Vcs-Bzr: move to canonical branch
+    - remove old transitional cruft
   * debian/rules:
     - build in parallel
     - force 4.6 build for now
