--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (2.12.0-0ubuntu2) UNRELEASED; urgency=low
+nux (2.12.0-0ubuntu2) quantal-proposed; urgency=low
 
   * debian/control:
     - build and dep on unversionned version of boost (transition to 1.49
