--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nux (3.0.0-0ubuntu3) UNRELEASED; urgency=low
+
+  * debian/control, debian/libnux-3.0-0.install,
+    debian/libnux-3.0-common.install, debian/libnux-3.0-dev.install:
+    - switch to nux-3.0
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Tue, 03 Jul 2012 12:07:19 +0200
+
 nux (2.12.0-0ubuntu2) quantal-proposed; urgency=low
 
   * debian/control:
