--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-nux (3.0.0-0ubuntu1) UNRELEASED; urgency=low
+nux (3.0.0-0ubuntu1) quantal-proposed; urgency=low
 
+  [ Łukasz 'sil2100' Zemczak ]
   * New upstream release.
     - Conditional jump or move depends on uninitialised value(s) 
       nux::GraphicsDisplay::ProcessXEvent(_XEvent, bool) (LP: #983321)
@@ -18,7 +19,7 @@ nux (3.0.0-0ubuntu1) UNRELEASED; urgency=low
     debian/libnux-3.0-common.install, debian/libnux-3.0-dev.install:
     - switch to nux-3.0
 
- -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Tue, 03 Jul 2012 12:07:19 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Tue, 10 Jul 2012 08:53:00 +0200
 
 nux (2.12.0-0ubuntu2) quantal-proposed; urgency=low
 
