--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nux (3.0.0-0ubuntu2) quantal; urgency=low
+
+  * Update build-dep to libgeis-dev for the great renaming transition.
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Mon, 30 Jul 2012 16:04:41 -0600
+
 nux (3.0.0-0ubuntu1) quantal-proposed; urgency=low
 
   [ Łukasz 'sil2100' Zemczak ]
