--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (3.2.0-0ubuntu2) UNRELEASED; urgency=low
+nux (3.2.0-0ubuntu2) quantal; urgency=low
 
   * debian/50_check_unity_support,
     debian/nux-tools.install:
