* debian/nux-tools.maintscript:   - remove the conffile
(bzr r159.1.201)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nux (3.2.0-0ubuntu3) UNRELEASED; urgency=low
+
+  * debian/nux-tools.maintscript:
+    - remove the conffile
+
+ -- Didier Roche <didrocks@ubuntu.com>  Wed, 15 Aug 2012 14:38:54 +0200
+
 nux (3.2.0-0ubuntu2) quantal; urgency=low
 
   * debian/50_check_unity_support,
