--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (3.4.0-0ubuntu1) UNRELEASED; urgency=low
+nux (3.4.0-0ubuntu1) quantal-proposed; urgency=low
 
   * New upstream release.
     - introduced NuxCore animation framework
