--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (3.10.0-0ubuntu1) UNRELEASED; urgency=low
+nux (3.10.0-0ubuntu1) quantal-proposed; urgency=low
 
   * New upstream release.
     - Remove a massive bottleneck, where almost all the CPU time was spent
