--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nux (4.0.0-0ubuntu1) UNRELEASED; urgency=low
 
   [ Didier Roche ]
   * Transition packaging to Nux 4.0
+  * Add split mode for daily build
 
  -- Didier Roche <didrocks@ubuntu.com>  Mon, 12 Nov 2012 08:12:53 +0100
 
