--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ nux (4.0.0-0ubuntu1) UNRELEASED; urgency=low
 
   [ Ricardo Salveti de Araujo ]
   * Doesn't need to depend on gcc 4.6 anymore (LP: #1044836)
+  * make check-headless should respect DEB_BUILD_OPTIONS=nocheck
 
  -- Didier Roche <didrocks@ubuntu.com>  Mon, 12 Nov 2012 08:12:53 +0100
 
