--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nux (4.0.1-0ubuntu1) UNRELEASED; urgency=low
+
+  * Buming version to 4.0.1 as per recent ABI changes
+
+ -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Mon, 08 Apr 2013 17:21:37 +0200
+
 nux (4.0.0daily13.03.25-0ubuntu1) raring; urgency=low
 
   [ Brandon Schaefer ]
