--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (4.0.1daily13.05.08ubuntu.unity.next-0ubuntu2) UNRELEASED; urgency=low
+nux (4.0.2-0ubuntu1) UNRELEASED; urgency=low
 
   * Fixes XIM event text buffer overflow. 
 
