--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nux (4.0.2-0ubuntu1) UNRELEASED; urgency=low
 
+  [ Brandon Schaefer ]
   * Fixes XIM event text buffer overflow. 
+
+  [ Łukasz 'sil2100' Zemczak ]
+  * Bump the upstream micro version to 4.0.2 as we have changed the ABI
 
  -- Brandon Schaefer <brandon.schaefer@canonical.com>  Tue, 21 May 2013 12:19:53 -0700
 
