--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nux (4.0.4-0ubuntu1) UNRELEASED; urgency=low
+
+  [ Sam Spilsbury ]
+  * Bump version to 4.0.4.
+
+ -- Chris Townsend <christopher.townsend@canonical.com>  Tue, 29 Oct 2013 18:12:16 -0400
+
 nux (4.0.3+13.10.20131011-0ubuntu1) saucy; urgency=low
 
   [ Stephen M. Webb ]
@@ -11,12 +18,6 @@ nux (4.0.3+13.10.20131011-0ubuntu1) saucy; urgency=low
   * Automatic snapshot from revision 824
 
  -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 11 Oct 2013 06:15:47 +0000
-
-nux (4.0.3+13.10.20130705-0ubuntu2) UNRELEASED; urgency=low
-
-  * Bump ABI
-
- -- Sam Spilsbury <smspillaz@interpol>  Mon, 22 Jul 2013 10:17:41 -0700
 
 nux (4.0.2+13.10.20131004-0ubuntu1) saucy; urgency=low
 
