--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,17 @@
+nux (4.0.5-0ubuntu1) UNRELEASED; urgency=low
+
+  [ Brandon Schaefer ]
+  * Add XIM preedit support
+  * Bump version to 4.0.5
+
+ -- Brandon Schaefer <brandon.schaefer@canonical.com>  Fri, 03 Jan 2014 08:31:35 -0800
+
 nux (4.0.4-0ubuntu2) UNRELEASED; urgency=low
 
   [ Sam Spilsbury ]
   * Bump version to 4.0.4.
 
-  [ Brandon Schaefer ]
-  * Add XIM preedit support
-
- -- Brandon Schaefer <brandon.schaefer@canonical.com>  Thu, 02 Jan 2014 09:55:20 -0800
+ -- Chris Townsend <christopher.townsend@canonical.com> Tue, 29 Oct 2013 18:12:16 -0400
 
 nux (4.0.3+13.10.20131011-0ubuntu1) saucy; urgency=low
 
