--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nux (4.0.6-0ubuntu1) UNRELEASED; urgency=low
+
+  * ABI bump 20140307.0
+
+ -- Stephen M. Webb <stephen.webb@canonical.com>  Fri, 07 Mar 2014 09:40:43 -0500
+
 nux (4.0.5+14.04.20140226-0ubuntu1) trusty; urgency=low
 
   [ Chris Townsend ]
