--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nux (4.0.7-0ubuntu1) UNRELEASED; urgency=medium
+
+  * bumped to package version 4.0.7
+
+ -- Stephen M. Webb <stephen.webb@canonical.com>  Wed, 30 Jul 2014 12:07:39 -0400
+
 nux (4.0.6+14.04.20140409-0ubuntu1) trusty; urgency=low
 
   [ Trung Ngo ]
