--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nux (4.0.8-0ubuntu1) UNRELEASED; urgency=medium
   * debian/control:
     - add xserver-xorg-video-dummy as build dependency
     - set libnux-4.0-common arch to all
+    - depend on source:Version of libnux-4.0-common
 
  -- Stephen M. Webb <stephen.webb@canonical.com>  Wed, 12 Aug 2015 09:33:13 -0400
 
