--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nux (4.0.8+16.04.20160209-0ubuntu2) xenial; urgency=medium
+
+  * Build without optimization on s390x for a first build. LP: #1570894.
+
+ -- Matthias Klose <doko@ubuntu.com>  Sun, 17 Apr 2016 21:26:20 +0200
+
 nux (4.0.8+16.04.20160209-0ubuntu1) xenial; urgency=medium
 
   [ Eleni Maria Stea ]
