--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nux (4.0.8+18.10.20180613.3-0ubuntu2) UNRELEASED; urgency=medium
+
+  * debian/nux-tools.preinst:
+    - Restore backup config files before installing nux-tools, so that they
+      will be updaded with the fixed versions (LP: #1768610)
+
+ -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Tue, 19 Jun 2018 05:20:32 +0200
+
 nux (4.0.8+18.10.20180613.3-0ubuntu1) cosmic; urgency=medium
 
   * debian/50_check_unity_support:
