--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nux (4.0.8+18.10.20180613.3-0ubuntu2) UNRELEASED; urgency=medium
 
+  * debian/control: update Vcs
   * debian/nux-tools.preinst:
     - Restore backup config files before installing nux-tools, so that they
       will be updaded with the fixed versions (LP: #1768610)
